<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/scan_btn"
        android:id="@+id/scan_button"
        android:layout_weight="20"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/btn_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/photo_btn"
        android:id="@+id/photo_button"
        android:layout_weight="20"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/btn_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/kp_btn"
        android:id="@+id/kp_button"
        android:layout_weight="7"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/btn_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/upload_btn"
        android:id="@+id/upload_button"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/btn_margin"
        android:enabled="false" />

</LinearLayout>
