<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".StartActivity">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margin"
        android:textSize="@dimen/text_size"
        android:id="@+id/catSpinner"
        android:background="@color/textedit_bg"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margin"
        android:textSize="@dimen/text_size"
        android:id="@+id/polSpinner"
        android:background="@color/textedit_bg"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/comand_num"
        android:textSize="@dimen/text_size"
        android:id="@+id/comandNumEdit"
        android:background="@color/textedit_bg"
        android:layout_margin="@dimen/btn_margin" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comand"
        android:textSize="@dimen/text_size"
        android:id="@+id/comandEdit"
        android:layout_margin="@dimen/btn_margin"
        android:background="@color/textedit_bg"
        android:inputType="textCapSentences" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="@dimen/text_size"
        android:id="@+id/nameEdit"
        android:layout_margin="@dimen/btn_margin"
        android:layout_gravity="center_horizontal"
        android:background="@color/textedit_bg"
        android:inputType="textCapWords|text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:textSize="@dimen/text_size"
        android:id="@+id/timeEdit"
        android:layout_margin="@dimen/btn_margin"
        android:layout_gravity="center_horizontal"
        android:inputType="time"
        android:background="@color/textedit_bg" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/start"
        android:id="@+id/upload_button"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/btn_margin"
        android:hint="@string/time" />

</LinearLayout>
