<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="@dimen/text_size"
        android:id="@+id/nameEdit"
        android:layout_margin="@dimen/btn_margin"
        android:layout_gravity="center_horizontal"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comand"
        android:textSize="@dimen/text_size"
        android:id="@+id/comandEdit"
        android:layout_margin="@dimen/btn_margin"
        android:layout_gravity="center_horizontal"
        android:inputType="text" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/upload_btn"
        android:id="@+id/upload_button"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/btn_margin" />

</LinearLayout>
